force-app/main/default/objects/numm__Cle_de_repartition__c/numm__Cle_de_repartition__c.object-meta.xml
<CustomObject>
    <label>Clé de répartition</label>
    <nameField>
        <label>Clé de répartition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clés de répartition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>