force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entite</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Entity__c.numm__GestionProprietaires__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Clés de répartition</relationshipLabel>
    <relationshipName>ClesRepartition</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>