force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Journal__c.field-meta.xml
<CustomField>
    <fullName>numm__Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Journal__c</referenceTo>
    <relationshipLabel>Clés de répartition</relationshipLabel>
    <relationshipName>ClesDeRepartition</relationshipName>
    <type>Lookup</type>
</CustomField>