force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Mode__c.field-meta.xml
<CustomField>
    <fullName>numm__Mode__c</fullName>
    <description>Mode de répartition</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Conso</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Nb Appart</fullName>
            </value>
            <value>
                <fullName>Nb lot</fullName>
            </value>
            <value>
                <fullName>Non repartit</fullName>
            </value>
            <value>
                <fullName>Tantieme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>