force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Montant_repartir__c.field-meta.xml
<CustomField>
    <fullName>numm__Montant_repartir__c</fullName>
    <label>Montant à répartir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>