force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Regle__c.field-meta.xml
<CustomField>
    <fullName>numm__Regle__c</fullName>
    <label>Règle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>