force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__Sum_Det__c.field-meta.xml
<CustomField>
    <fullName>numm__Sum_Det__c</fullName>
    <label>Tantième</label>
    <summarizedField>numm__Detail_des_repartitions__c.numm__Montant__c</summarizedField>
    <summaryForeignKey>numm__Detail_des_repartitions__c.numm__Cle_de_repartition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>