force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__TECH_Unique_Cle_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Unique_Cle_Entite__c</fullName>
    <description>Contrôle l&#39;unicité d&#39;une clé par entité</description>
    <label>Unicité de la clé par entité</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>