force-app/main/default/objects/numm__Cle_de_repartition__c/fields/numm__TECH_Unique_Mode_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Unique_Mode_Entite__c</fullName>
    <label>Unicité du mode par entité</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>