force-app/main/default/objects/numm__Cle_de_repartition__c/validationRules/numm__ModeObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__ModeObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( numm__Mode__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>numm__Mode__c</errorDisplayField>
    <errorMessage>Le mode de répartition est obligatoire</errorMessage>
</ValidationRule>