force-app/main/default/objects/numm__Cle_de_repartition__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__Mode__c</columns>
    <columns>numm__Montant_repartir__c</columns>
    <columns>numm__Regle__c</columns>
    <columns>numm__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>